force-app/main/default/objects/Collection__c/Collection__c.object-meta.xml
<CustomObject>
    <label>Collection</label>
    <nameField>
        <displayFormat>C-{0000}</displayFormat>
        <label>Collection Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Collections</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>