force-app/main/default/objects/Collection__c/fields/Amount_Collected__c.field-meta.xml
<CustomField>
    <fullName>Amount_Collected__c</fullName>
    <description>This will hold the amount collected against an invoice(part payment as well)</description>
    <label>Amount Collected</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>