force-app/main/default/objects/Collection__c/fields/Credit_Amount_Used__c.field-meta.xml
<CustomField>
    <fullName>Credit_Amount_Used__c</fullName>
    <label>Credit Amount Used</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>