force-app/main/default/objects/Collection__c/fields/Distributor_Name__c.field-meta.xml
<CustomField>
    <fullName>Distributor_Name__c</fullName>
    <formula>Invoice__r.Distributor_Account__r.Name</formula>
    <label>Distributor Name</label>
    <type>Text</type>
</CustomField>