force-app/main/default/objects/Collection__c/fields/Distributor_Role__c.field-meta.xml
<CustomField>
    <fullName>Distributor_Role__c</fullName>
    <formula>Invoice__r.Distributor_Account__r.Owner.UserRole.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Distributor Role</label>
    <type>Text</type>
</CustomField>