force-app/main/default/objects/Collection__c/fields/Is_Cleared__c.field-meta.xml
<CustomField>
    <fullName>Is_Cleared__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Cheque Is Cleared</label>
    <type>Checkbox</type>
</CustomField>