force-app/main/default/objects/Collection__c/fields/Narration__c.field-meta.xml
<CustomField>
    <fullName>Narration__c</fullName>
    <label>Narration</label>
    <length>255</length>
    <type>Text</type>
</CustomField>