force-app/main/default/objects/Collection__c/fields/Retailer__c.field-meta.xml
<CustomField>
    <fullName>Retailer__c</fullName>
    <formula>IF(
    Invoice__r.RecordType.DeveloperName = &quot;Secondary_Invoice&quot;,
   Invoice__r.Retailer_Account__c,
    IF(
      Invoice__r.RecordType.DeveloperName = &quot;Secondary_Invoice_Under_SS&quot;,
        Invoice__r.Under_SS__c,
        &quot;&quot;
    )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Customer</label>
    <type>Text</type>
</CustomField>