force-app/main/default/objects/Collection__c/fields/Salesman__c.field-meta.xml
<CustomField>
    <fullName>Salesman__c</fullName>
    <formula>Invoice__r.Order__r.Ordered_By__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Salesman</label>
    <type>Text</type>
</CustomField>