force-app/main/default/objects/Collection__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Invoice__c</columns>
    <columns>Retailer_Name__c</columns>
    <columns>Payment_Method__c</columns>
    <columns>Payment_Date__c</columns>
    <columns>Amount_Collected__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Collections</label>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
        <allPartnerUsers></allPartnerUsers>
        <group>All_Internal_Users</group>
    </sharedTo>
</ListView>