force-app/main/default/objects/Collection__c/listViews/My_Collections.listView-meta.xml
<ListView>
    <fullName>My_Collections</fullName>
    <columns>NAME</columns>
    <columns>Invoice__c</columns>
    <columns>Retailer_Name__c</columns>
    <columns>Payment_Method__c</columns>
    <columns>Payment_Date__c</columns>
    <columns>Amount_Collected__c</columns>
    <filterScope>Everything</filterScope>
    <label>My Collections</label>
    <sharedTo>
        <allPartnerUsers></allPartnerUsers>
    </sharedTo>
</ListView>